[package]
name = "relayer"
description = "Send shared records to L1 solana smart contract"
documentation = ""
version = "1.18.26"
#authors = { workspace = true }
#repository = { workspace = true }
#homepage = { workspace = true }
license = "Apache-2.0"
edition = "2021"


[dependencies]
solana-client = { version = "=1.18.25" }
solana-cli-config = { version = "=1.18.25" }
solana-clap-utils = { version = "=1.18.25" }
solana-sdk = { version = "=1.18.25" }
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
config = { version ="0.14.0"}
bs58 = "0.4.0"
bytemuck = "1.14.0"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
env_logger = "0.9.3"
lazy_static = "1.4.0"
uuid = { version = "1.10.0", features = ["v4"] }
serde = "1.0.195"
serde_derive = "1.0.103"
serde_json = "1.0.111"
serde_with = { version = "2.3.3", default-features = false }
serde_yaml = "0.9.30"
r2d2 = { version ="0.8.10"}
argon2 = { version = "0.5.3"}
diesel = { version = "=2.1.6", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
lombok = { version ="0.4.0"}
schemars = { version ="0.8.21"}
symlink = "0.1.0"
regex = "1.10.3"
clap = "2.33.1"
hex = "0.4.3"
blake2b-rs = { version = "0.2.0" }
bincode = "1.3.3"
byteorder = "1.5.0"
shank = { version ="0.4.2" }
thiserror = "1.0.56"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["custom"] }
libc = "0.2.152"
signal-hook = "0.3.17"
tempfile = "3.9.0"
itertools = "0.10.5"
postgres = { version = "0.19.8", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.7", features = ["derive"] }
sparse-merkle-tree = { git = "https://github.com/MultiAdaptive/sparse-merkle-tree.git", branch = "main", commit = "1c53fd1bb27d8649ce1f2260af6fa43f7aee7436" }
verify-smt = { git = "https://github.com/MultiAdaptive/verify-smt.git", branch = "main", commit = "c0bd009399e5b2dc6cae0e9a3a4500515dc87588" }
dd-merkle-tree = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_matches = "1.5.0"

[dependencies.rocksdb]
version = "0.21.0"
default-features = false
features = ["lz4"]


